--- a/src/app/pages/direct-message/direct-message.component.scss
+++ b/src/app/pages/direct-message/direct-message.component.scss
@@ -101,3 +101,11 @@ h3 {
   line-height: 100%;
   letter-spacing: 0%;
 }
+
+.spinner-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+  width: 100%;
+}
